--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Salom</h1>
+    <h1>Task 1</h1>
+    <div id="root">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, at.
+    </div>
 </body>
+<script src="script.js"></script>
+
 </html>
